create contour_mesh function instead of overloading GeometryData()

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -341,22 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 4952xFixedSizeArrays.Point{3,Float64},     faces: 9896xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efbcbbad2d0>))"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[37], in expression starting on line 15",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[37], in expression starting on line 15",
+      ""
+     ]
     }
    ],
    "source": [
@@ -373,19 +370,19 @@
     "upper_bound = Vec(1., 1, 1)\n",
     "\n",
     "# Those two pieces of information are all we need to construct a robot\n",
-    "# geometry. For this, we'll need the GeometryData type:\n",
-    "geometry = GeometryData(f, lower_bound, upper_bound)\n",
+    "# geometry. For this, we'll need the contour_mesh function:\n",
+    "mesh = contour_mesh(f, lower_bound, upper_bound)\n",
     "# Under the hood, this will sample f at regularly spaced points inside\n",
     "# the bounding rectangle, then compute a surface that connects all the \n",
     "# points for which f(x) = 0.\n",
     "\n",
     "# And now we can load that geometry into the visualizer\n",
-    "model = Visualizer(geometry)"
+    "model = Visualizer(mesh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -401,24 +398,20 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efbcbbad300>))"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {
-      "comm_id": "8e3c8d79-b9c7-40f0-aa9c-01d6b09649b5",
-      "reactive": true
-     },
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[38], in expression starting on line 10",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[38], in expression starting on line 10",
+      "",
+      " in (::##32#33)(::Float64) at ./In[38]:11",
+      " in map(::Function, ::Reactive.Signal{Float64}) at /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/Reactive/src/operators.jl:29"
+     ]
     }
    ],
    "source": [
     "# We can even manipulate the geometry by changing the iso level. \n",
-    "# By default, GeometryData constructs a mesh connecting the points \n",
+    "# By default, contour_mesh constructs a mesh connecting the points \n",
     "# in space for which f(x) = 0, where 0 is called the isosurface level\n",
     "# or iso level. But we can change that iso level to any number we want:\n",
     "\n",
@@ -427,7 +420,7 @@
     "upper_bound = Vec(1., 1, 1)\n",
     "\n",
     "@manipulate for iso_level in linspace(-1, 1)\n",
-    "    geometry = GeometryData(f, lower_bound, upper_bound, iso_level)\n",
+    "    geometry = contour_mesh(f, lower_bound, upper_bound, iso_level)\n",
     "    model = Visualizer(geometry);\n",
     "end\n",
     "\n",
@@ -456,46 +449,6 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "0.5.0"
-  },
-  "widgets": {
-   "state": {
-    "0d0baa8b-124d-457f-8c79-82ac2498620b": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "4f42b453-edd3-4633-8380-cc89bfb9dc8e": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "519be6aa-5309-4185-ac08-40f6f5b2b07f": {
-     "views": [
-      {
-       "cell_index": 18
-      }
-     ]
-    },
-    "e58a7c12-1367-4469-9b28-17ff28f257fe": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "eedbcf84-af84-4878-8b43-71d7e642e744": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
