demonstrate multi-robot use

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Precompiling module DrakeVisualizer...\n"
+      "adding: /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/DrakeVisualizer/src/lcmtypes to the python path\n"
      ]
     }
    ],
@@ -45,18 +45,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Recompiling stale cache file /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/lib/v0.5/Interact.ji for module Interact.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"interact-js-shim\">\n",
+       "    <script charset=\"utf-8\">\n",
+       "(function (IPython, $, _, MathJax) {\n",
+       "    $.event.special.destroyed = {\n",
+       "\tremove: function(o) {\n",
+       "\t    if (o.handler) {\n",
+       "\t\to.handler.apply(this, arguments)\n",
+       "\t    }\n",
+       "\t}\n",
+       "    }\n",
+       "\n",
+       "    var OutputArea = IPython.version >= \"4.0.0\" ? require(\"notebook/js/outputarea\").OutputArea : IPython.OutputArea;\n",
+       "\n",
+       "    var redrawValue = function (container, type, val) {\n",
+       "\tvar selector = $(\"<div/>\");\n",
+       "\tvar oa = new OutputArea(_.extend(selector, {\n",
+       "\t    selector: selector,\n",
+       "\t    prompt_area: true,\n",
+       "\t    events: IPython.events,\n",
+       "\t    keyboard_manager: IPython.keyboard_manager\n",
+       "\t})); // Hack to work with IPython 2.1.0\n",
+       "\n",
+       "\tswitch (type) {\n",
+       "\tcase \"image/png\":\n",
+       "            var _src = 'data:' + type + ';base64,' + val;\n",
+       "\t    $(container).find(\"img\").attr('src', _src);\n",
+       "\t    break;\n",
+       "\tdefault:\n",
+       "\t    var toinsert = OutputArea.append_map[type].apply(\n",
+       "\t\toa, [val, {}, selector]\n",
+       "\t    );\n",
+       "\t    $(container).empty().append(toinsert.contents());\n",
+       "\t    selector.remove();\n",
+       "\t}\n",
+       "\tif (type === \"text/latex\" && MathJax) {\n",
+       "\t    MathJax.Hub.Queue([\"Typeset\", MathJax.Hub, toinsert.get(0)]);\n",
+       "\t}\n",
+       "    }\n",
+       "\n",
+       "\n",
+       "    $(document).ready(function() {\n",
+       "\tfunction initComm(evt, data) {\n",
+       "\t    var comm_manager = data.kernel.comm_manager;\n",
+       "        //_.extend(comm_manager.targets, require(\"widgets/js/widget\"))\n",
+       "\t    comm_manager.register_target(\"Signal\", function (comm) {\n",
+       "            comm.on_msg(function (msg) {\n",
+       "                //Widgets.log(\"message received\", msg);\n",
+       "                var val = msg.content.data.value;\n",
+       "                $(\".signal-\" + comm.comm_id).each(function() {\n",
+       "                var type = $(this).data(\"type\");\n",
+       "                if (val[type]) {\n",
+       "                    redrawValue(this, type, val[type], type);\n",
+       "                }\n",
+       "                });\n",
+       "                delete val;\n",
+       "                delete msg.content.data.value;\n",
+       "            });\n",
+       "\t    });\n",
+       "\n",
+       "\t    // coordingate with Comm and redraw Signals\n",
+       "\t    // XXX: Test using Reactive here to improve performance\n",
+       "\t    $([IPython.events]).on(\n",
+       "\t\t'output_appended.OutputArea', function (event, type, value, md, toinsert) {\n",
+       "\t\t    if (md && md.reactive) {\n",
+       "                // console.log(md.comm_id);\n",
+       "                toinsert.addClass(\"signal-\" + md.comm_id);\n",
+       "                toinsert.data(\"type\", type);\n",
+       "                // Signal back indicating the mimetype required\n",
+       "                var comm_manager = IPython.notebook.kernel.comm_manager;\n",
+       "                var comm = comm_manager.comms[md.comm_id];\n",
+       "                comm.then(function (c) {\n",
+       "                    c.send({action: \"subscribe_mime\",\n",
+       "                       mime: type});\n",
+       "                    toinsert.bind(\"destroyed\", function() {\n",
+       "                        c.send({action: \"unsubscribe_mime\",\n",
+       "                               mime: type});\n",
+       "                    });\n",
+       "                })\n",
+       "\t\t    }\n",
+       "\t    });\n",
+       "\t}\n",
+       "\n",
+       "\ttry {\n",
+       "\t    // try to initialize right away. otherwise, wait on the status_started event.\n",
+       "\t    initComm(undefined, IPython.notebook);\n",
+       "\t} catch (e) {\n",
+       "\t    $([IPython.events]).on('kernel_created.Kernel kernel_created.Session', initComm);\n",
+       "\t}\n",
+       "    });\n",
+       "})(IPython, jQuery, _, MathJax);\n",
+       "</script>\n",
+       "    <script>\n",
+       "        window.interactLoadedFlag = true\n",
+       "       $(\"#interact-js-shim\").bind(\"destroyed\", function () {\n",
+       "           if (window.interactLoadedFlag) {\n",
+       "               console.warn(\"JavaScript required by Interact will be removed if you remove this cell or run using Interact more than once.\")\n",
+       "           }\n",
+       "       })\n",
+       "       $([IPython.events]).on(\"kernel_starting.Kernel kernel_restarting.Kernel\", function () { window.interactLoadedFlag = false })\n",
+       "   </script>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import Interact: @manipulate"
+    "using Interact"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +184,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +249,7 @@
        "DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +283,7 @@
        " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +305,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -324,9 +441,9 @@
        "nothing"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {
-      "comm_id": "59db85ec-bb36-4965-972e-3ea6706df011",
+      "comm_id": "4c9aaca6-5d74-4ae7-a91e-814ed37984cf",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -341,19 +458,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[37], in expression starting on line 15",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[37], in expression starting on line 15",
-      ""
-     ]
+     "data": {
+      "text/plain": [
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
+       "    vertices: 4952xFixedSizeArrays.Point{3,Float64},     faces: 9896xGeometryTypes.Face{3,Int64,0}, )\n",
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f7e8c47c540>))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -382,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -398,15 +518,19 @@
      "output_type": "display_data"
     },
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[38], in expression starting on line 10",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: UndefVarError: contour_mesh not defined\nwhile loading In[38], in expression starting on line 10",
-      "",
-      " in (::##32#33)(::Float64) at ./In[38]:11",
-      " in map(::Function, ::Reactive.Signal{Float64}) at /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/Reactive/src/operators.jl:29"
-     ]
+     "data": {
+      "text/plain": [
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
+       "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f7e8c47c690>))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {
+      "comm_id": "47d9c6ec-5cf4-4bec-b7c4-b02381f89545",
+      "reactive": true
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -430,6 +554,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{DrakeVisualizer.Visualizer,1}:\n",
+       " DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(0.0,1.0,0.0,0.5)),DrakeVisualizer.GeometryData{CoordinateTransformations.Translation{StaticArrays.SVector{3,Float64}},GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),Translation(0.0,0.0,1.0),RGBA{Float64}(0.0,0.0,1.0,0.5))],\"link1\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f7e6e2b0a20>))\n",
+       " DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link2\")]),2,PyLCM.LCM(PyObject <LCM object at 0x7f7e6e2b0a20>))                                                                                                                                                                                                                                                                                 "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# It is also possible to visualize multiple robots at the same time,\n",
+    "# while sending separate draw() commands for each robot. To do that,\n",
+    "# we construct two Robot() objects and pass them both in to the call\n",
+    "# to Visualizer. This will return *two* visualizers, which we can use\n",
+    "# to draw each robot separately:\n",
+    "\n",
+    "vis1, vis2 = Visualizer([Robot([link1]), Robot([link2])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "Interact.Slider{Float64}(Signal{Float64}(0.9795918367346939, nactions=0),\"z\",0.9795918367346939,linspace(0.0,2.0,50),\".3f\",true)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nothing"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {
+      "comm_id": "abe491dc-37cc-4859-8408-95d69e159c97",
+      "reactive": true
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To demonstrate this, let's move the first robot while leaving the\n",
+    "# second one where it is. We do that by calling draw() on vis1:\n",
+    "@manipulate for z in linspace(0, 2)\n",
+    "    draw(vis1, [Translation(0, 0, z)])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "Interact.Slider{Float64}(Signal{Float64}(0.9795918367346939, nactions=0),\"x\",0.9795918367346939,linspace(0.0,2.0,50),\".3f\",true)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nothing"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {
+      "comm_id": "e4215fde-93a9-4355-b072-c9aab60c1d8d",
+      "reactive": true
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now let's move just the second robot by calling draw() on vis2:\n",
+    "@manipulate for x in linspace(0, 2)\n",
+    "    draw(vis2, [Translation(x, 0, 0)])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -440,7 +671,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.0-rc3",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
    "name": "julia-0.5"
   },
@@ -449,6 +680,53 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "0.5.0"
+  },
+  "widgets": {
+   "state": {
+    "85e2071b-afc6-4277-8f37-db2a128dd324": {
+     "views": [
+      {
+       "cell_index": 16
+      }
+     ]
+    },
+    "8d06bb4c-e628-4d63-8e1f-cdd6a0bf3f66": {
+     "views": [
+      {
+       "cell_index": 16
+      }
+     ]
+    },
+    "a3b8cc7d-e607-425a-aca3-de05b3e13dc4": {
+     "views": [
+      {
+       "cell_index": 21
+      }
+     ]
+    },
+    "b9c35ad4-7357-4f64-a4cf-aef699f37087": {
+     "views": [
+      {
+       "cell_index": 18
+      }
+     ]
+    },
+    "fcb8fea7-ff16-45ee-92fa-c639b95dd341": {
+     "views": [
+      {
+       "cell_index": 16
+      }
+     ]
+    },
+    "ff16e905-5a9f-46f4-b1e8-26cb22189bbf": {
+     "views": [
+      {
+       "cell_index": 20
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
