add screenshots and update demo instructions (and add cat.obj demo)

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -5,17 +5,9 @@
    "metadata": {},
    "source": [
     "# DrakeVisualizer.jl\n",
-    "This notebook demonstrates interacting with the Drake Visualizer app from Julia. To run it, you'll need to:\n",
+    "This notebook demonstrates interacting with the Drake Visualizer app from Julia. On Mac and Ubuntu, just installing `DrakeVisualizer.jl` will also install a pre-built version of the standalone `drake-visualizer` executable. \n",
     "\n",
-    "* install Drake: http://drake.mit.edu/\n",
-    "* add the Drake lcmtypes to your python path: \n",
-    "    * `export PYTHONPATH=\"$PYTHONPATH:/path/to/drake-distro/build/lib/python2.7/dist-packages\"`\n",
-    "* install the DrakeVisualizer.jl package:\n",
-    "    * `Pkg.clone(\"https://github.com/rdeits/DrakeVisualizer.jl.git\")`\n",
-    "* launch the `drake-visualizer` app:\n",
-    "    * `cd /path/to/drake-distro/build/bin`\n",
-    "    * `./drake-visualizer`\n",
-    "        "
+    "If you're not on one of those platforms, you'll need to install Director (which includes `drake-visualizer`) from <https://github.com/robotlocomotion/director>"
    ]
   },
   {
@@ -25,38 +17,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adding: /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/DrakeVisualizer/src/lcmtypes to the python path\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Activate the DrakeVisualizer package, and import some other \n",
-    "# useful functions\n",
-    "using DrakeVisualizer\n",
-    "import GeometryTypes: HyperRectangle, Vec, HomogenousMesh, SignedDistanceField\n",
-    "using CoordinateTransformations\n",
-    "import Meshing\n",
-    "import ColorTypes: RGBA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Recompiling stale cache file /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/lib/v0.5/Interact.ji for module Interact.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -165,10 +125,46 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding: /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/lcmtypes to the python path\n"
+     ]
     }
    ],
    "source": [
-    "using Interact"
+    "# Activate the DrakeVisualizer package, and import some other \n",
+    "# useful functions\n",
+    "using DrakeVisualizer\n",
+    "using CoordinateTransformations\n",
+    "using Interact\n",
+    "import GeometryTypes: HyperRectangle, Vec, HomogenousMesh\n",
+    "import ColorTypes: RGBA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Process(`drake-visualizer`, ProcessRunning)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run the following command to launch the viewer application:\n",
+    "proc = DrakeVisualizer.new_window()"
    ]
   },
   {
@@ -443,7 +439,7 @@
      },
      "execution_count": 16,
      "metadata": {
-      "comm_id": "4c9aaca6-5d74-4ae7-a91e-814ed37984cf",
+      "comm_id": "a497fd1c-6765-47d6-a9a1-fe558eeb1977",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -462,27 +458,43 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "# Of course, we can draw much more interesting geometries than \n",
+    "# just simple boxes. Let's load a 3D mesh and visualize it:\n",
+    "using MeshIO\n",
+    "using FileIO\n",
+    "cat = load(joinpath(Pkg.dir(\"GeometryTypes\"), \"test\", \"data\", \"cat.obj\"))\n",
+    "model = Visualizer(cat);\n",
+    "draw(model, [LinearMap(AngleAxis(pi/2, 1, 0, 0))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 4952xFixedSizeArrays.Point{3,Float64},     faces: 9896xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f7e8c47c540>))"
+       "    vertices: 6945xFixedSizeArrays.Point{3,Float64},     faces: 13260xGeometryTypes.Face{3,Int64,0}, )\n",
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x321da5570>))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Of course, we can draw much more interesting geometries than \n",
-    "# just simple boxes. Let's create a triangulated mesh by finding\n",
+    "# Next, let's create a triangulated mesh by finding\n",
     "# the 0-level set of some function. \n",
     "# \n",
     "# First, we'll define our function:\n",
-    "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
+    "f = x -> sum(sin(5 * x))\n",
     "\n",
     "# Then we pick a region of interest in which to sample the function.\n",
     "# This region starts at (-1, -1, -1) and extends to (1, 1, 1):\n",
@@ -502,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -521,13 +533,13 @@
      "data": {
       "text/plain": [
        "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f7e8c47c690>))"
+       "    vertices: 6915xFixedSizeArrays.Point{3,Float64},     faces: 13212xGeometryTypes.Face{3,Int64,0}, )\n",
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x3229335d0>))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {
-      "comm_id": "47d9c6ec-5cf4-4bec-b7c4-b02381f89545",
+      "comm_id": "f5d726d2-aa82-4b68-aed7-4e2da1ccf97f",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -539,7 +551,7 @@
     "# in space for which f(x) = 0, where 0 is called the isosurface level\n",
     "# or iso level. But we can change that iso level to any number we want:\n",
     "\n",
-    "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
+    "f = x -> sum(sin(5 * x))\n",
     "lower_bound = Vec(-1.,-1,-1)\n",
     "upper_bound = Vec(1., 1, 1)\n",
     "\n",
@@ -554,24 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2-element Array{DrakeVisualizer.Visualizer,1}:\n",
-       " DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(0.0,1.0,0.0,0.5)),DrakeVisualizer.GeometryData{CoordinateTransformations.Translation{StaticArrays.SVector{3,Float64}},GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),Translation(0.0,0.0,1.0),RGBA{Float64}(0.0,0.0,1.0,0.5))],\"link1\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f7e6e2b0a20>))\n",
-       " DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link2\")]),2,PyLCM.LCM(PyObject <LCM object at 0x7f7e6e2b0a20>))                                                                                                                                                                                                                                                                                 "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# It is also possible to visualize multiple robots at the same time,\n",
     "# while sending separate draw() commands for each robot. To do that,\n",
@@ -579,12 +578,12 @@
     "# to Visualizer. This will return *two* visualizers, which we can use\n",
     "# to draw each robot separately:\n",
     "\n",
-    "vis1, vis2 = Visualizer([Robot([link1]), Robot([link2])])"
+    "vis1, vis2 = Visualizer([Robot([link1]), Robot([link2])]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -605,9 +604,9 @@
        "nothing"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {
-      "comm_id": "abe491dc-37cc-4859-8408-95d69e159c97",
+      "comm_id": "1621e259-cf6f-47c7-97af-32e64f6e3f5e",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -623,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -644,9 +643,9 @@
        "nothing"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {
-      "comm_id": "e4215fde-93a9-4355-b072-c9aab60c1d8d",
+      "comm_id": "b4d41922-649e-4886-9d07-acaf127b5b4c",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -661,12 +660,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Close the viewer\n",
+    "kill(proc)"
+   ]
   }
  ],
  "metadata": {
@@ -683,45 +696,45 @@
   },
   "widgets": {
    "state": {
-    "85e2071b-afc6-4277-8f37-db2a128dd324": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "8d06bb4c-e628-4d63-8e1f-cdd6a0bf3f66": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "a3b8cc7d-e607-425a-aca3-de05b3e13dc4": {
+    "39004ced-07df-4447-9695-5cb9d75e90e2": {
      "views": [
       {
        "cell_index": 21
       }
      ]
     },
-    "b9c35ad4-7357-4f64-a4cf-aef699f37087": {
-     "views": [
-      {
-       "cell_index": 18
-      }
-     ]
-    },
-    "fcb8fea7-ff16-45ee-92fa-c639b95dd341": {
+    "3debe61b-9f85-4021-a8d7-08b7b16d20a9": {
      "views": [
       {
        "cell_index": 16
       }
      ]
     },
-    "ff16e905-5a9f-46f4-b1e8-26cb22189bbf": {
+    "9f0e1d87-0d32-4cd1-923f-5fc96a07854c": {
      "views": [
       {
-       "cell_index": 20
+       "cell_index": 16
+      }
+     ]
+    },
+    "afe7c004-f5e9-4668-9255-8caa982fadf8": {
+     "views": [
+      {
+       "cell_index": 19
+      }
+     ]
+    },
+    "d0f3b731-10bf-49be-a1d5-4dd6aa101b4c": {
+     "views": [
+      {
+       "cell_index": 16
+      }
+     ]
+    },
+    "f4eba759-f456-4700-97b9-3853072046b1": {
+     "views": [
+      {
+       "cell_index": 22
       }
      ]
     }
